# robotics-codes

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: robocore.hpp
src/: robocore.cpp
src/examples/: rotation_ex.cpp
src/examples/1/: CMakeLists.txt  README.md  cruise_control_ex.cpp  dc_motor_ex.cpp  dc_motor_ex.m  diff-drive-Kinematics_ex.cpp  diff_drive_Kinematics_ex.cpp  diff_drive_kinematics_ex.cpp  forward_kinematics_two_link_arm_ex.cpp  hTransformation_ex.cpp  rotation_ex.cpp  translation_ex.cpp
src/examples/3/: README.md
src/examples/3/challenge1_ws/src/follow_me/launch/: two_tb3.launch
src/examples/3/challenge1_ws/src/follow_me/src/: follower_node.cpp
src/examples/3/challenge2_ws/src/follow_me_plusplus/: CMakeLists.txt  package.xml
src/examples/3/challenge2_ws/src/follow_me_plusplus/launch/: two_tb3.launch
src/examples/3/challenge2_ws/src/follow_me_plusplus/src/: follower_node.cpp
src/examples/3/challenge3_ws/: README.md
src/examples/3/example_ws/src/follow_me/: CMakeLists.txt  package.xml
src/examples/3/example_ws/src/follow_me/launch/: two_tb3.launch
src/examples/3/example_ws/src/follow_me/script/: tb3_0_teleop_key
src/examples/3/example_ws/src/follow_me/src/: follower_node.cpp
src/examples/3/example_ws/src/lidar_sensor/: CMakeLists.txt  package.xml
src/examples/3/example_ws/src/lidar_sensor/src/: lidar_node.cpp
src/examples/3/example_ws/src/temperature_sensor/: CMakeLists.txt  package.xml
src/examples/3/example_ws/src/temperature_sensor/script/: app_node.py  sensor_node.py
src/examples/3/example_ws/src/temperature_sensor/src/: app_node.cpp  sensor_node.cpp
src/examples/3/homework1_ws/src/motor_control/: CMakeLists.txt  package.xml
src/examples/3/homework1_ws/src/motor_control/src/: control_node.cpp
src/examples/3/homework2_ws/src/robot/: CMakeLists.txt  package.xml
src/examples/3/homework2_ws/src/robot/src/: pidcfg_node.cpp
tests/: CMakeLists.txt  rPlotTest.cpp
